[gd_scene load_steps=6 format=3 uid="uid://bwqpofjyth5iw"]

[ext_resource type="Script" uid="uid://b5po1tm18331h" path="res://scripts/game_ui.gd" id="1_bt76a"]
[ext_resource type="LabelSettings" uid="uid://bgs3g6qviu5xs" path="res://resources/level_attempt.tres" id="1_yubou"]
[ext_resource type="LabelSettings" uid="uid://cbacog4dtlp3n" path="res://resources/level_complete.tres" id="2_u001w"]
[ext_resource type="LabelSettings" uid="uid://en7kua0ytovx" path="res://resources/level_press_space.tres" id="3_u2dgd"]
[ext_resource type="AudioStream" uid="uid://cx7ess85n28m" path="res://assets/audio/jazzyfrenchy.mp3" id="4_u2dgd"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bt76a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBLevelInfo" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBLevelInfo"]
layout_mode = 2
text = "Level   1"
label_settings = ExtResource("1_yubou")

[node name="AttemptLabel" type="Label" parent="MarginContainer/VBLevelInfo"]
layout_mode = 2
text = "Attempt   0"
label_settings = ExtResource("1_yubou")

[node name="VBLevelComplete" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelCompletelLabel" type="Label" parent="MarginContainer/VBLevelComplete"]
layout_mode = 2
text = "Level   Complete !"
label_settings = ExtResource("2_u001w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressEscapeLabel" type="Label" parent="MarginContainer/VBLevelComplete"]
layout_mode = 2
text = "Press   Escape"
label_settings = ExtResource("3_u2dgd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u2dgd")
volume_db = -20.0
parameters/looping = true
